<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="dlg_ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="reset_message">Reset all entries to default?</string>
    <string name="group_applications">Applications</string>
    <string name="select_custom_app_title">Select custom application</string>
    <string name="gestures_dashboard_summary">Simple touchscreen gestures on locked screen</string>
    <string name="enable_gestures_title">Enable gestures</string>
    <string name="enable_gestures_summary">Enable screen off gestures</string>
    <string name="gestures_title">Gestures</string>
    <string name="gesture_double_tap_title">Gesture Double Tap</string>
    <string name="gesture_w_title">Gesture W</string>
    <string name="gesture_m_title">Gesture M</string>
    <string name="gesture_s_title">Gesture S</string>
    <string name="gesture_circle_title">Gesture Circle</string>
    <string name="gesture_two_swipe_title">Gesture Two Swipe</string>
    <string name="gesture_up_arrow_title">Gesture Up Arrow</string>
    <string name="gesture_down_arrow_title">Gesture Down Arrow</string>
    <string name="gesture_left_arrow_title">Gesture Left Arrow</string>
    <string name="gesture_right_arrow_title">Gesture Right Arrow</string>
    <string name="gesture_swipe_up_title">Gesture Swipe Up</string>
    <string name="gesture_swipe_down_title">Gesture Swipe Down</string>
    <string name="gesture_swipe_left_title">Gesture Swipe Left</string>
    <string name="gesture_swipe_right_title">Gesture Swipe Right</string>
    <string name="RealmeParts">realme Lab</string>
    <string name="RealmeParts_summary">Experimental Features\.\nGestures\, AOD and tweaks</string>
    <string name="screen_off_gestures">Screen-off gestures</string>
    <string name="gestures">Gestures</string>
    <string name="enable_dt2w_title">Enable Double Tap</string>
    <string name="enable_dt2w_summary">Enable Double Tap Gestures</string>
    <string name="dt2w_title">Double Tap</string>
    <string name="haptic_feedback_title">Haptic Feedback</string>
    <string name="action_none">None</string>
    <string name="action_app">Custom app</string>
    <string name="action_home">Home</string>
    <string name="action_back">Back</string>
    <string name="action_menu">Menu</string>
    <string name="action_ime">Open IME Switcher</string>
    <string name="action_power_menu">Power menu</string>
    <string name="action_recent">Recents</string>
    <string name="action_power">Screen Off</string>
    <string name="action_search">Search in app</string>
    <string name="action_now_on_tap">Now on Tap</string>
    <string name="action_ring_vib">Ring/Vib</string>
    <string name="action_ring_silent">Ring/Silent</string>
    <string name="action_ring_vib_silent">Ring/Vib/Silent</string>
    <string name="action_camera">Camera</string>
    <string name="action_media_next">Music - next track</string>
    <string name="action_media_play_pause">Music - play/pause</string>
    <string name="action_media_previous">Music - previous track</string>
    <string name="action_wake_device">Wake up device</string>
    <string name="action_kill">Kill app</string>
    <string name="action_screenshot">Screenshot</string>
    <string name="action_lastapp">Last app</string>
    <string name="action_notifications">Notifications</string>
    <string name="action_qs">Quicksettings panel</string>
    <string name="action_torch">Flashlight</string>
    <string name="action_longpress">Longpress:</string>
    <string name="action_select_action_longpress">Choose longpress action:</string>
    <string name="action_select_action">Choose action:</string>
    <string name="action_select_action_newaction">Choose new action:</string>
    <string name="action_reset">Reset</string>
    <string name="action_add">Add</string>
    <string name="action_reset_message">Reset all entries to default?</string>
    <string name="action_max">Maximum entries size has been reached</string>
    <string name="action_warning">Warning</string>
    <string name="action_warning_message">It is not possible to delete last entry</string>
    <string name="action_required_warning_message">It is not possible to delete required buttons</string>
    <string name="action_disable_message">Disabled\nAdd an entry to enable this feature</string>
    <string name="shortcut_image_not_valid">The chosen app did not return a valid icon or does not support image cropping. Use another app.</string>
    <string name="shortcut_duplicate_entry">The chosen action cannot be added twice</string>
    <string name="action_help_shortcut">shortcut</string>
    <string name="action_help_button">button</string>
    <string name="action_help_app">app</string>
    <string name="action_help_icon">, while selecting the icon will bring up customization options</string>
    <string name="action_help_main">To add a %1$s, select the Add icon. Once a %1$s is added, selecting the row will change the target%2$s\n\nTo remove a %1$s, swipe the row horizontally left or right. Re-order a %1$s in the list by vertically dragging the anchor on the left.\n\nTo clear or reset to defaults, select the reset option.</string>
    <string name="screen_off_gesture_settings_title">Screen off gestures</string>
    <string name="ambient_display_title">Display</string>
    <string name="ambient_display_enable_title">Ambient display</string>
    <string name="ambient_display_enable_summary">Wake screen when you receive notifications</string>
    <string name="ambient_display_gestures_title">Ambient display gestures</string>
    <string name="ambient_display_gestures_summary">Additional gestures to wake the screen</string>
    <string name="ambient_display_summary">Wake screen when you receive notifications</string>
    <string name="ambient_display_summary_on">Screen will wake when you receive notifications</string>
    <string name="ambient_display_summary_off">Screen will not wake when you receive notifications</string>
    <string name="ambient_display_always_on_title">Always on</string>
    <string name="ambient_display_always_on_summary">Show time, notification icons, and other info. Increased battery usage.</string>
    <string name="tilt_sensor_title">Tilt sensor</string>
    <string name="pickup_sensor_title">Pickup sensor</string>
    <string name="proximity_sensor_title">Proximity sensor</string>
    <string name="hand_wave_gesture_title">Hand wave</string>
    <string name="hand_wave_gesture_summary">Pulse notifications on hand wave</string>
    <string name="hand_wave_gesture_flat_title">Detect orientation</string>
    <string name="hand_wave_gesture_flat_summary">Pulse only if the phone is lying face up on a flat surface</string>
    <string name="pick_up_gesture_title">Pick-up</string>
    <string name="pick_up_gesture_summary">Pulse notifications on pick-up</string>
    <string name="pocket_gesture_title">Pocket</string>
    <string name="pocket_gesture_summary">Pulse notifications on removal from pocket</string>
    <string name="proximity_wake_title">Proximity wake</string>
    <string name="proximity_wake_enable_title">Proximity wake</string>
    <string name="proximity_wake_enable_summary">Wake device on hand wave</string>
    <string name="dialog_ok">OK</string>
    <string name="doze_settings_help_title">Help</string>
    <string name="doze_settings_help_text">These features use sensor events to launch a doze notification pulse. The chosen sensor is only enabled when the device receives a notification, this helps to reduce battery usage. There is also an option to enable the chosen sensor as soon as the screen turns off, this will cause higher battery usage.</string>
    <string name="switch_bar_on">On</string>
    <string name="switch_bar_off">Off</string>
    <string name="device_settings_app_name">Advanced settings</string>
    <string name="screen_gestures_panel_title">Gestures</string>
    <string name="ambient_gesture_extras">Extras</string>
    <string name="ambient_gesture_haptic_feedback">Haptic feedback</string>
    <string name="ambient_gesture_haptic_feedback_summary">Vibrate when a Ambient gesture is detected</string>
    <string name="touchscreen_gesture_haptic_feedback">Haptic feedback</string>
    <string name="touchscreen_gesture_haptic_feedback_summary">Vibrate when a Touchscreen gesture is detected</string>
    <string name="vibrator_intensity_control">Vibration control</string>
    <string name="raise_to_wake_gesture_title">Raise to wake</string>
    <string name="raise_to_wake_gesture_summary">Wake up the device instead of pulsing notification</string>
    <string name="misc_title">Tweaks</string>
    <string name="otg_title">Enable OTG</string>
    <string name="otg_summary">Enable USB on-the-go device</string>
    <string name="otg_enable_summary_not_supported">OTG is currently not supported</string>
    <string name="double_tap_gesture_title">Double tap to check phone</string>
    <string name="double_tap_gesture_summary">Double tap to show notifications</string>
    <string name="dc_dimming_enable_title">Anti-flicker</string>
    <string name="dc_dimming_enable_summary">Reduces eye strain in low light conditions</string>
    <string name="dc_dimming_enable_summary_not_supported">DC Dimming is currently not supported by the kernel</string>
    <string name="display_settings_title">Display tweaks</string>
    <string name="display_settings_summary">High brightness mode and Anti-flicker</string>
    <string name="hbm_mode_title">High Brightness Mode</string>
    <string name="hbm_mode_summary">High Brightness Mode allows the display panel brightness to go above the maximum stock value\, which helps in improving visibility in direct sunlight</string>
    <string name="hbm_enable_summary_not_supported">HBM is not currently supported by the kernel</string>
    <string name="misc_settings_title">Miscelleneous</string>
    <string name="misc_settings_summary">Customizations that does not fall in above categories</string>
    <string name="misc_stable_title">Stable</string>
    <string name="misc_beta_title">Beta</string>
    <string name="misc_settings_warning_text">The feature(s) available in Beta section is(are) not completely Stable yet. Using Beta feature(s) may or may not have any unwanted effect(s) to the device, so use at your own risk\nIf Beta feature(s) found Stable enough, they might get added into Stable section in future release</string>
    <string name="gameswitch_enable_summary">Boosts touch sampling rate for smoother and better game play</string>
    <string name="gameswitch_enable_title">Gaming mode</string>
    <string name="gameswitch_enable_summary_not_supported">Gaming mode is not currently supported</string>
    <string name="fastcharge_summary">Force restricts fast charging to reduce the heat produced while charging and thus extending the lifespan of the battery\nTo force restrict fast charging enable this toggle, whereas to keep using fast charging keep this toggle disabled</string>
    <string name="fastcharge_title">Restrict fast charging</string>
    <string name="fastcharge_summary_not_supported">Restriction of fast charge is not currently supported</string>
</resources>