<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2015 The CyanogenMod Project
                   2018-2019 The LineageOS Project
     Licensed under the Apache License, Version 2.0 (the "License"
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/misc_settings_title">

    <PreferenceCategory
        android:key="misc_settings_stable_category"
        android:title="@string/misc_stable_title">

        <SwitchPreference
            android:key="otg"
            android:title="@string/otg_title"
            android:summary="@string/otg_summary" />

        <SwitchPreference
            android:key="game_switch"
            android:defaultValue="false"
            android:title="@string/gameswitch_enable_title"
            android:summary="@string/gameswitch_enable_summary" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="misc_settings_beta_category"
        android:title="@string/misc_beta_title">

        <SwitchPreference
            android:key="fast_charge"
            android:defaultValue="false"
            android:title="@string/fastcharge_title"
            android:summary="@string/fastcharge_summary" />

    </PreferenceCategory>

    <com.android.settingslib.widget.FooterPreference
        android:key="misc_settings_footer"
        android:title="@string/misc_settings_warning_text"
        android:selectable="false" />
</PreferenceScreen>
